Add construction page for implementation tool

--- a/implementation.html
+++ b/implementation.html
@@ -11,9 +11,19 @@
   <body>
     <header-component></header-component>
     <div class="container">
-      <div class="row my-2">
+      <div class="row my-4">
         <div class="col-md-8 offset-md-2">
-          <h1>Implementation tool</h1>
+          <div class="card border-danger">
+            <div class="card-body">
+              <p class="lead fs-1 text-danger">
+                <i class="bi bi-cone-striped"></i>
+                <span class="ms-2">Page is currently under construction.</span>
+              </p>
+              <p class="text-secondary fs-5">
+                Please keep a close eye on this space!
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
