Edit landing page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,44 @@
   <body>
     <header-component></header-component>
     <div class="container">
-      <div class="row my-2">
+      <div class="row my-4">
         <div class="col-md-8 offset-md-2">
-          <h1>Home</h1>
+          <p class="text-center text-primary fs-1">Welcome to <i class="bi bi-robot"></i> AI guidance tool!</p>
+          <p class="text-center text-secondary">A tool to ensure safe development and implementation of AI in healthcare.</p>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-md-2 offset-md-2 text-center text-success">
+          <i class="bi bi-pc-display" style="font-size:100px"></i>
+        </div>
+        <div class="col-md-6">
+          <p class="text-success fs-3">What is the AI guidance tool?</p>
+          <p class="text-secondary">While there are potential benefits of AI in healthcare, there are risks and ethical concerns if the AI is not properly designed and implemented.</p>
+          <p class="text-secondary">Based on the Singapore's Ministry of Health's (MOH) Artificial Intelligence in Healthcare Guidelines (AIHGIe), this tool distils the essential steps developers and implementers of AI should undertake to make AI safe in healthcare.</p>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-md-6 offset-md-2">
+          <p class="fs-3 text-info">What is the AIGHIe document?</p>
+          <p class=text-secondary>Singapore's MOH developed the AIHGIe document, which intends to support patient safety and improve trust in the use of AI by:</p>
+          <ol class=text-secondary>
+            <li>Sharing good practices with Developers (e.g. AI Medical Device manufacturers) and Implementers (e.g. Healthcare Institutions)</li>
+            <li>Complementing Singapore’s Health Sciences Authority's (HSA) regulations for AI Medical (AI-MD) Devices</li>
+            <li>Periodically being updated as a ‘living’ document with good practices</li>
+          </ol>
+        </div>
+        <div class="col-md-2 text-center text-info">
+          <i class="bi bi-file-medical" style="font-size:100px"></i>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-md-2 offset-md-2 text-center text-warning">
+          <i class="bi bi-people" style="font-size:100px"></i>
+        </div>
+        <div class="col-md-6">
+          <p class="text-warning fs-3">Who should use the AI guidance tool?</p>
+          <p class="text-secondary"><b>Developers</b>: Examples include AI Medical Device companies/manufacturers. Developers should use the <a href="development.html">Development Tool</a>.</p>
+          <p class="text-secondary"><b>Implementers</b>: Examples include healthcare institutions - hospitals, clinics, laboratories, etc. Implementers should use the <a href="implementation.html">Implementation Tool</a>.</p>
         </div>
       </div>
     </div>
