Add help section

--- a/development.html
+++ b/development.html
@@ -11,13 +11,25 @@
   <body>
     <header-component></header-component>
     <div class="container">
+      <div class="row my-4">
+        <div class="col-md-8 offset-md-2">
+          <p class="fs-5 text-primary"><i class="bi bi-question-octagon"></i> Quick guide</p>
+          <ul>
+            <li><b><i class="bi bi-check2-square"></i> Checklist feature:</b> Check off items on the checklist as you complete them to ensure safety of your AI model for healthcare use.</li>
+            <li><b><i class="bi bi-journal-medical"></i> References to AIGHIe guidelines:</b> The reference to the original AIGHIe guidelines' section and subsection can be found in square brackets (e.g. <b>[4.2.1]</b>).</li>
+            <li><b><i class="bi bi-clipboard-plus"></i> Expand for more details:</b> Tap on the icon to find summative details extracted from the appropriate parts within the original AIGHIe guidelines.</li>
+            <li><b><i class="bi bi-send-check"></i> Generate report feature:</b> Generate brief summary of uncompleted tasks.</li>
+          </ul>
+        </div>
+      </row>
+
       <div class="row my-2">
         <div class="col-md-8 offset-md-2">
           <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  <span class="badge rounded-pill text-bg-primary">1</span><span class="ms-1 lead">Design</span>
+                  <span class="badge rounded-pill text-bg-primary">1</span><span class="ms-1 lead">Design (0/7)</span>
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
@@ -170,7 +182,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  <span class="badge rounded-pill text-bg-primary">2</span><span class="ms-1 lead">Build</span>
+                  <span class="badge rounded-pill text-bg-primary">2</span><span class="ms-1 lead">Build (0/3)</span>
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
@@ -227,7 +239,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  <span class="badge rounded-pill text-bg-primary">3</span><span class="ms-1 lead">Test</span>
+                  <span class="badge rounded-pill text-bg-primary">3</span><span class="ms-1 lead">Test (0/3)</span>
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
