--- a/development.html
+++ b/development.html
@@ -29,11 +29,11 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  <span class="badge rounded-pill text-bg-primary">1</span><span class="ms-1 lead">Design (0/7)</span>
+                  <span class="badge rounded-pill text-bg-primary">1</span><span class="ms-1 lead">Design (<span id="designCount">0</span>/7)</span>
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                <div class="accordion-body">
+                <div id="designSteps" class="accordion-body">
                   <div class="form-check mb-2">
                     <input class="form-check-input fs-5" type="checkbox" value="" id="flexCheckDefault1">
                     <label class="form-check-label" for="flexCheckDefault1">
@@ -182,11 +182,11 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  <span class="badge rounded-pill text-bg-primary">2</span><span class="ms-1 lead">Build (0/3)</span>
+                  <span class="badge rounded-pill text-bg-primary">2</span><span class="ms-1 lead">Build (<span id="buildCount">0</span>/3)</span>
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                <div class="accordion-body">
+                <div id="buildSteps" class="accordion-body">
                   <div class="form-check mb-2">
                     <input class="form-check-input fs-5" type="checkbox" value="" id="flexCheckDefault8">
                     <label class="form-check-label" for="flexCheckDefault8">
@@ -239,11 +239,11 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  <span class="badge rounded-pill text-bg-primary">3</span><span class="ms-1 lead">Test (0/3)</span>
+                  <span class="badge rounded-pill text-bg-primary">3</span><span class="ms-1 lead">Test (<span id="testCount">0</span>/3)</span>
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                <div class="accordion-body">
+                <div id="testSteps" class="accordion-body">
                   <div class="form-check mb-2">
                     <input class="form-check-input fs-5" type="checkbox" value="" id="flexCheckDefault11">
                     <label class="form-check-label" for="flexCheckDefault11">
@@ -306,6 +306,26 @@
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function () {
+        $("input[type=checkbox]").each(function () {
+          $(this).change(updateCount);
+        });
+
+        updateCount();
+
+        function updateCount () {
+          var designCount = $("#designSteps input[type=checkbox]:checked").length;
+          var buildCount = $("#buildSteps input[type=checkbox]:checked").length;
+          var testCount = $("#testSteps input[type=checkbox]:checked").length;
+
+          $("#designCount").text(designCount);
+          $("#buildCount").text(buildCount);
+          $("#testCount").text(testCount);
+        };
+      });
+    </script>
   </body>
 </html>
