--- a/development.html
+++ b/development.html
@@ -18,7 +18,7 @@
             <li><b><i class="bi bi-check2-square"></i> Checklist feature:</b> Check off items on the checklist as you complete them to ensure safety of your AI model for healthcare use.</li>
             <li><b><i class="bi bi-journal-medical"></i> References to AIGHIe guidelines:</b> The reference to the original AIGHIe guidelines' section and subsection can be found in square brackets (e.g. <b>[4.2.1]</b>).</li>
             <li><b><i class="bi bi-clipboard-plus"></i> Expand for more details:</b> Tap on the icon to find summative details extracted from the appropriate parts within the original AIGHIe guidelines.</li>
-            <li><b><i class="bi bi-send-check"></i> Generate report feature:</b> Generate brief summary of uncompleted tasks.</li>
+            <li><b><i class="bi bi-send-check"></i> Automatic progress report generation feature:</b> Automatically generate report of progress and next steps once every task is completed.</li>
           </ul>
         </div>
       </row>
@@ -305,6 +305,30 @@
           </div>
         </div>
       </div>
+
+      <div class="row my-2">
+        <div class="col-md-8 offset-md-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title"><i class="bi bi-flag"></i> Progress Report (<span id="totalCount">0</span>/13)</h5>
+              <div class="progress my-2">
+                <div id="progressBar" class="progress-bar progress-bar-striped" role="progressbar" aria-label="Steps Progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+              </div>
+              <div id="completeMessage" class="collapse">
+                <p class="text-success fs-3"><i class="bi bi-award"></i> Congratulations! You have completed all the safety checks for the development workflow.</p>
+                <p>Suggested next steps as follows:</p>
+                <ol>
+                  <li><span class="text-primary">Review your internal development and implementation governance and controls</span>
+                    and align these to the recommendations</li>
+                  <li><span class="text-primary">Consult HSA</span> early if you are developing AI medical devices (pre-market
+                    consultation route)</li>
+                  <li>Check in <a href="https://go.gov.sg/aihgle-feedback">HERE</a> with MOH if you have comments/queries on the AIHGle</li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -320,10 +344,21 @@
           var designCount = $("#designSteps input[type=checkbox]:checked").length;
           var buildCount = $("#buildSteps input[type=checkbox]:checked").length;
           var testCount = $("#testSteps input[type=checkbox]:checked").length;
+          var totalCount = $("input[type=checkbox]:checked").length;
+          var totalCheckboxes = $("input[type=checkbox]").length;
+          var progressPercentage = totalCount /totalCheckboxes * 100;
 
           $("#designCount").text(designCount);
           $("#buildCount").text(buildCount);
           $("#testCount").text(testCount);
+          $("#totalCount").text(totalCount);
+          $('#progressBar').css('width', progressPercentage+'%').attr('aria-valuenow', progressPercentage);
+          $('#progressBar').text(progressPercentage.toFixed(1)+'%');
+          if(progressPercentage === 100){
+            $("#completeMessage").addClass("show");
+          }else{
+            $("#completeMessage").removeClass("show");
+          }
         };
       });
     </script>
